<resources>
    <string name="app_name">Assistant</string>
    <string name="app_products_detail">Detail Products</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_transaction">Transaction</string>
    <string name="loading">Waiting for sync...</string>
    <string name="description_refresh">Refresh</string>

    <string name="pid">PID</string>
    <string name="barcode">Barcode</string>
    <string name="description">Description</string>
    <string name="unit">Unit</string>
    <string name="price">Price</string>
    <string name="updated">Last Update</string>
    <string name="action_clear_transaction">Clear Data</string>
    <string name="search_label">Product</string>
    <string name="search_hint">Search the Product</string>
</resources>
